--- a/src/Module 8/Data Quality Best Practices & Real-World Use Cases/Ques_2.ipynb
+++ b/src/Module 8/Data Quality Best Practices & Real-World Use Cases/Ques_2.ipynb
@@ -150,7 +150,7 @@
     "    expectation_suite_name=\"customer_data_suite\"\n",
     ")\n",
     "\n",
-    "print(\"\\nCreating basic expectations for the dataset...\")\n",
+    "print(\"\\nCreating basic expectations for the Dataset...\")\n",
     "# Expectation 1: `customer_id` column exists\n",
     "validator.expect_column_to_exist(\"customer_id\")\n",
     "# Expectation 2: `name` column exists\n",
