--- a/src/Module 8/Data Quality Best Practices & Real-World Use Cases/Ques_3.ipynb
+++ b/src/Module 8/Data Quality Best Practices & Real-World Use Cases/Ques_3.ipynb
@@ -94,7 +94,7 @@
     "# This creates the 'great_expectations' directory with configuration files.\n",
     "print(f\"Initializing Great Expectations data context in '{ge_project_dir}'...\")\n",
     "context = ge.data_context.DataContext.create(project_dir=ge_project_dir)\n",
-    "print(\"Great Expectations data context initialized.\")\n",
+    "print(\"Great expectations data context initialized.\")\n",
     "\n",
     "# --- Previous Tasks (Customer Data) ---\n",
     "\n",
