--- a/src/Module 8/Data Quality Best Practices & Real-World Use Cases/Ques_4.ipynb
+++ b/src/Module 8/Data Quality Best Practices & Real-World Use Cases/Ques_4.ipynb
@@ -464,7 +464,7 @@
     "\n",
     "\n",
     "# Open Data Docs to review all validation reports\n",
-    "print(\"\\nOpening Data Docs to review all validation reports...\")\n",
+    "print(\"\\nOpening data Docs to review all validation reports...\")\n",
     "context.open_data_docs()\n",
     "print(\"Data Docs report generated and opened in your browser (if supported by your environment).\")\n",
     "\n",
