--- a/src/Module 8/Data Quality Best Practices & Real-World Use Cases/Ques_4.ipynb
+++ b/src/Module 8/Data Quality Best Practices & Real-World Use Cases/Ques_4.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
     "    name=checkpoint_name_patients,\n",
     "    validator=validator_patients,\n",
     "    action_list=[\n",
-    "        {\"name\": \"store_validation_result\", \"action_class\": \"StoreValidationResultAction\"},\n",
+    "        {\"name\": \"Store_validation_result\", \"action_class\": \"StoreValidationResultAction\"},\n",
     "        {\"name\": \"store_evaluation_parameter_metrics\", \"action_class\": \"StoreEvaluationParametersAction\"},\n",
     "        {\"name\": \"update_data_docs\", \"action_class\": \"UpdateDataDocsAction\"},\n",
     "    ],\n",
