--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_4.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_4.ipynb
@@ -24,17 +24,155 @@
    "source": [
     "# write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Record is valid and serialized.\n",
+      "🔁 Read back record:\n",
+      " {\n",
+      "  \"name\": \"Alice\",\n",
+      "  \"age\": 30,\n",
+      "  \"address\": {\n",
+      "    \"street\": \"123 Main St\",\n",
+      "    \"city\": \"Wonderland\",\n",
+      "    \"zipcode\": \"12345\"\n",
+      "  },\n",
+      "  \"phones\": [\n",
+      "    {\n",
+      "      \"type\": \"mobile\",\n",
+      "      \"number\": \"123-456-7890\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"home\",\n",
+      "      \"number\": \"098-765-4321\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import avro.schema\n",
+    "import avro.io\n",
+    "import io\n",
+    "\n",
+    "# Step 1: Define the schema as a JSON string\n",
+    "schema_json = \"\"\"\n",
+    "{\n",
+    "  \"type\": \"record\",\n",
+    "  \"name\": \"User\",\n",
+    "  \"fields\": [\n",
+    "    {\n",
+    "      \"name\": \"name\",\n",
+    "      \"type\": \"string\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"name\": \"age\",\n",
+    "      \"type\": \"int\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"name\": \"address\",\n",
+    "      \"type\": {\n",
+    "        \"type\": \"record\",\n",
+    "        \"name\": \"Address\",\n",
+    "        \"fields\": [\n",
+    "          { \"name\": \"street\", \"type\": \"string\" },\n",
+    "          { \"name\": \"city\", \"type\": \"string\" },\n",
+    "          { \"name\": \"zipcode\", \"type\": \"string\" }\n",
+    "        ]\n",
+    "      }\n",
+    "    },\n",
+    "    {\n",
+    "      \"name\": \"phones\",\n",
+    "      \"type\": {\n",
+    "        \"type\": \"array\",\n",
+    "        \"items\": {\n",
+    "          \"type\": \"record\",\n",
+    "          \"name\": \"PhoneNumber\",\n",
+    "          \"fields\": [\n",
+    "            { \"name\": \"type\", \"type\": \"string\" },\n",
+    "            { \"name\": \"number\", \"type\": \"string\" }\n",
+    "          ]\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "# Parse the schema\n",
+    "schema = avro.schema.parse(schema_json)\n",
+    "\n",
+    "# Step 2: Example data to validate\n",
+    "record = {\n",
+    "    \"name\": \"Alice\",\n",
+    "    \"age\": 30,\n",
+    "    \"address\": {\n",
+    "        \"street\": \"123 Main St\",\n",
+    "        \"city\": \"Wonderland\",\n",
+    "        \"zipcode\": \"12345\"\n",
+    "    },\n",
+    "    \"phones\": [\n",
+    "        {\"type\": \"mobile\", \"number\": \"123-456-7890\"},\n",
+    "        {\"type\": \"home\", \"number\": \"098-765-4321\"}\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Step 3: Validate and serialize\n",
+    "def validate_and_serialize(data, schema):\n",
+    "    try:\n",
+    "        buffer = io.BytesIO()\n",
+    "        encoder = avro.io.BinaryEncoder(buffer)\n",
+    "        writer = avro.io.DatumWriter(schema)\n",
+    "        writer.write(data, encoder)\n",
+    "        return buffer.getvalue()  # serialized bytes\n",
+    "    except Exception as e:\n",
+    "        print(\"Validation failed:\", e)\n",
+    "        return None\n",
+    "\n",
+    "# Step 4: Deserialize and read back\n",
+    "def deserialize(serialized_data, schema):\n",
+    "    buffer = io.BytesIO(serialized_data)\n",
+    "    decoder = avro.io.BinaryDecoder(buffer)\n",
+    "    reader = avro.io.DatumReader(schema)\n",
+    "    return reader.read(decoder)\n",
+    "\n",
+    "# Run the full flow\n",
+    "serialized = validate_and_serialize(record, schema)\n",
+    "if serialized:\n",
+    "    print(\"✅ Record is valid and serialized.\")\n",
+    "    restored = deserialize(serialized, schema)\n",
+    "    print(\"🔁 Read back record:\\n\", json.dumps(restored, indent=2))\n",
+    "else:\n",
+    "    print(\"❌ Record validation failed.\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
